--- a/app/globals.css
+++ b/app/globals.css
@@ -75,11 +75,19 @@ main.page-transition-end {
 } */
 
 .bg-dynamic {
-  background-color: #f8f9fa;
+  background-color: #f8f9fae3;
 }
 
 .dark .bg-dynamic {
-  background: #0f0f0f;
+  background: #0f0f0fd3;
+}
+
+.bg-dynamic-secondary {
+  background-color: #ececec;
+}
+
+.dark .bg-dynamic-secondary {
+  background: #0a0a0a;
 }
 
 @layer base {
