--- a/app/globals.css
+++ b/app/globals.css
@@ -82,12 +82,20 @@ main.page-transition-end {
   background: #0f0f0fd3;
 }
 
+.bg-dynamic-h:hover {
+  background-color: #ffffff;
+}
+
+.dark .bg-dynamic-h:hover {
+  background: #1b1b1b;
+}
+
 .bg-dynamic-secondary {
   background-color: #ececec;
 }
 
 .dark .bg-dynamic-secondary {
-  background: #0a0a0a;
+  background: #1b1b1b;
 }
 
 @layer base {
