--- a/components/carousel/carousel.css
+++ b/components/carousel/carousel.css
@@ -5,8 +5,8 @@
 }
 
 .swiper_container {
-  height: 32rem;
-  padding: 2rem 0;
+  height: 36rem;
+  width: 100%;
   position: relative;
 }
 
@@ -31,16 +31,17 @@
 }
 
 .swiper-slide {
-  --progress: 1;
-  filter: blur(calc((var(--progress) - 1) * 50px))
-    opacity(calc(1 - 1 * var(--progress) + 1));
+  --progress: 0; /* Default progress value */
+  filter: blur(calc(var(--progress) * 20px)) drop-shadow(0 4px 8px #0000004d)
+    opacity(calc(var(--progress) + 2.5))
+    brightness(calc(1 + 0.2 * var(--progress)));
 }
 
 .dark .swiper-slide {
   --progress: 1;
   filter: brightness(calc(1 - 0.5 * var(--progress)))
-    opacity(calc(1 - 1 * var(--progress) + 1))
-    blur(calc((var(--progress) - 1) * 50px));
+    drop-shadow(0 0 8px #0000004d) opacity(calc(1 - 1 * var(--progress) + 1))
+    blur(calc(var(--progress) * 16px));
 }
 
 .slider-controler {
@@ -72,6 +73,7 @@
 .slider-controler .swiper-button-next {
   position: absolute;
   top: 50%;
+  margin-bottom: 1rem;
 }
 
 .slider-controler .swiper-button-prev {
@@ -88,13 +90,13 @@
 
 .swiper-slide-prev .gradient-slider,
 .swiper-slide-next .gradient-slider {
-  background: radial-gradient(
+  /* background: radial-gradient(
     circle at top right,
     rgba(195, 184, 254, calc(var(--progress) * 0.8)) 0%,
     rgba(178, 196, 252, calc(var(--progress) * 0.6)) 33%,
     rgba(248, 207, 179, calc(var(--progress) * 0.6)) 66%,
     rgba(235, 163, 223, calc(var(--progress))) 100%
-  );
+  ); */
   transition: background 0.6s;
   pointer-events: none;
 }
@@ -114,8 +116,10 @@
   background: radial-gradient(
     circle at top right,
 
-    rgba(255, 255, 255, 0) 20%,
-    rgba(0, 0, 0, 0.9) 100%
+    rgba(48, 48, 48, 0.6) 0%,
+    rgba(100, 16, 148, 0.2) 33%,
+    rgba(11, 7, 59, 0.4) 66%,
+    rgba(0, 0, 0, 0.9) 90%
   );
 }
 
