--- a/app/globals.css
+++ b/app/globals.css
@@ -444,14 +444,10 @@ main.page-transition-end {
   transform: translateY(0);
 }
 
-.text-indent-last-line {
-  margin-bottom: 1.5em;
+.dynamic-border:hover {
+  border: 1px solid #00000050;
 }
 
-.text-indent-last-line::after {
-  content: "";
-  display: block;
-  margin-top: -1.5em; /* Equal to margin-bottom */
-  height: 1.5em; /* Equal to margin-bottom */
-  overflow: hidden;
+.dark .dynamic-border:hover {
+  border: 1px solid #ffffff50;
 }
