--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -15,16 +15,6 @@
   height: 42rem;
 }
 
-@media (max-width: 500px) {
-  .swiper-container {
-    height: 47rem;
-  }
-  .swiper-slide {
-    width: 28rem !important;
-    height: 36rem !important;
-  }
-}
-
 .swiper-slide-shadow-left,
 .swiper-slide-shadow-right {
   display: none;
@@ -32,7 +22,7 @@
 
 .swiper-slide {
   --progress: 0; /* Default progress value */
-  filter: blur(calc(var(--progress) * 20px)) drop-shadow(0 4px 8px #0000004d)
+  filter: blur(calc(var(--progress) * 20px)) drop-shadow(0px 10px 8px #0000004d)
     opacity(calc(var(--progress) + 2.5))
     brightness(calc(1 + 0.2 * var(--progress)));
 }
@@ -42,6 +32,18 @@
   filter: brightness(calc(1 - 0.5 * var(--progress)))
     drop-shadow(0 0 8px #0000004d) opacity(calc(1 - 1 * var(--progress) + 1))
     blur(calc(var(--progress) * 16px));
+}
+
+@media (max-width: 1024px) {
+  .swiper_container {
+    height: 32rem;
+  }
+}
+
+@media (max-width: 714px) {
+  .swiper-slide {
+    filter: drop-shadow(0px 0px 0px #0000004d);
+  }
 }
 
 .slider-controler {
