--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -352,6 +352,7 @@ main.page-transition-end {
   flex: 0 0 100%;
   position: relative;
   -webkit-mask: linear-gradient(90deg, #0000, #000 10% 90%, #0000);
+  mask: linear-gradient(90deg, #0000, #000 10% 90%, #0000);
 }
 
 .group-carousel-links {
@@ -393,42 +394,88 @@ main.page-transition-end {
   animation: slide 20s ease-in-out infinite;
 }
 
+.slider-container {
+  margin-right: 1rem;
+  overflow: hidden;
+  height: 1em;
+}
+
 .slider-container div {
   display: flex;
   align-items: center;
-  height: 128px;
-  margin-bottom: 128px;
-  padding: 0 15px 0 0;
+  height: 100%;
+  margin-bottom: 0;
+  padding: 0 1rem;
+}
+
+.slider-container div span {
+  background: linear-gradient(
+    to right,
+    #f1de7a 20%,
+    #6d53d3 30%,
+    #628acc 70%,
+    #df8b5a 80%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 500% auto;
+  animation: textShine 20s ease-in-out infinite alternate;
+}
+
+.dark .slider-container div span {
+  background: linear-gradient(
+    to right,
+    #baa1f1 20%,
+    #9c97f0 30%,
+    #b4d0f5 70%,
+    #efbafc 80%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 500% auto;
+  animation: textShine 20s ease-in-out infinite alternate;
+}
+
+@keyframes textShine {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
 @keyframes slide {
   0% {
-    margin-top: 0px;
-  } /* Line 1 */
-  20% {
-    margin-top: 0px;
-  } /* Line 1 visible until 20% */
+    transform: translateY(0); /* Start at the top */
+  }
   25% {
-    margin-top: -256px;
-  } /* Line 2 appears */
-  45% {
-    margin-top: -256px;
-  } /* Line 2 visible until 45% */
-  50% {
-    margin-top: -512px;
-  } /* Line 3 appears */
-  70% {
-    margin-top: -512px;
-  } /* Line 3 visible until 70% */
-  75% {
-    margin-top: -768px;
-  } /* Line 4 appears */
+    transform: translateY(0); /* Hold at Line 1 */
+  }
+  30% {
+    transform: translateY(-100%); /* Slide to Line 2 */
+  }
+  55% {
+    transform: translateY(-100%); /* Hold at Line 2 */
+  }
+  60% {
+    transform: translateY(-200%); /* Slide to Line 3 */
+  }
+  85% {
+    transform: translateY(-200%); /* Hold at Line 3 */
+  }
   90% {
-    margin-top: -768px;
-  } /* Line 4 visible until 90% */
+    transform: translateY(-300%); /* Slide to Line 4 */
+  }
   100% {
-    margin-top: 0px;
-  } /* Smooth return to top */
+    transform: translateY(0); /* Smooth return to top */
+  }
+}
+
+.slider-container div {
+  animation: slide 20s infinite;
 }
 
 .fade-in {
@@ -448,4 +495,163 @@ main.page-transition-end {
 
 .dark .dynamic-border:hover {
   border: 1px solid #ffffff50;
+}
+
+.box {
+  &::after {
+    position: absolute;
+    border-radius: 3rem;
+
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    transform: scale(0.9) translateZ(0);
+    filter: blur(15px);
+    background: linear-gradient(
+      to left,
+      #ff5770,
+      #e4428d,
+      #c42da8,
+      #9e16c3,
+      #6501de,
+      #9e16c3,
+      #c42da8,
+      #e4428d,
+      #ff5770
+    );
+    background-size: 200% 200%;
+    animation: animateGlow 10s linear infinite;
+  }
+}
+
+@keyframes animateGlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
+}
+
+.orb {
+  animation: spin 4s linear infinite;
+  width: 300px;
+  height: 300px;
+  scale: 3;
+  margin: auto;
+  margin-top: 140px;
+  border-radius: 50%;
+  box-shadow: inset 0 0 50px #383838, inset 20px 0 60px #8410f1,
+    inset -20px 0 60px #5544ec, inset 20px 0 300px #a01cdd,
+    inset -20px 0 300px #3321d6, 0 0 50px #555555, -10px 0 60px #e01df1,
+    10px 0 60px #3222c9;
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes blink-animation {
+  0%,
+  100% {
+    opacity: var(--blink-opacity, 1);
+  }
+  50% {
+    opacity: 0;
+  }
+}
+/*houdini*/
+
+/*base*/
+
+/*custom*/
+
+@keyframes smoothBg {
+  from {
+    background-position: 50% 50%, 50% 50%;
+  }
+  to {
+    background-position: 350% 50%, 350% 50%;
+  }
+}
+
+.hero {
+  --stripe-color: #ffffff;
+  --bg: var(--stripe-color);
+  --maincolor: var(--bg);
+
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  position: absolute;
+  bottom: 0;
+  height: 100vh;
+  z-index: -1;
+  --stripes: repeating-linear-gradient(
+    100deg,
+    var(--stripe-color) 0%,
+    var(--stripe-color) 7%,
+    transparent 10%,
+    transparent 12%,
+    var(--stripe-color) 16%
+  );
+
+  --rainbow: repeating-linear-gradient(
+    100deg,
+    #c29dff 10%,
+    #ffc99d 15%,
+    #a2c6fc 20%,
+    #baabff 25%,
+    #f3aa7a 30%
+  );
+  background-image: var(--stripes), var(--rainbow);
+  background-size: 300%, 200%;
+  background-position: 50% 50%, 50% 50%;
+
+  filter: blur(50px) invert(100%);
+
+  mask-image: radial-gradient(ellipse at 100% 100%, black 40%, transparent 70%);
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-image: var(--stripes), var(--rainbow);
+    background-size: 200%, 100%;
+    animation: smoothBg 60s linear infinite;
+    mix-blend-mode: difference;
+  }
+}
+
+.dark .hero {
+  --stripe-color: #0e0e0e;
+
+  --rainbow: repeating-linear-gradient(
+    100deg,
+    #3730cc 10%,
+    #a830cc 15%,
+    #3730cc 20%,
+    #5a30cc 25%,
+    #a830cc 30%
+  );
+
+  filter: blur(100px) opacity(60%);
+
+  mask-image: radial-gradient(ellipse at 100% 80%, black 20%, transparent 70%);
+}
+
+.city-card {
+  background: radial-gradient(
+    ellipse at center,
+    #4438ca48 0%,
+    #4438ca2d 30%,
+    #4438ca0e 70%
+  );
+  backdrop-filter: blur(20px);
 }
