--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -360,11 +360,19 @@ main.page-transition-end {
   gap: 20px;
   padding-right: 20px;
   will-change: transform;
-  animation: scrolling 60s linear infinite;
+  animation: scrolling 160s linear infinite;
 }
 
 .carousel:hover .group-carousel-links {
   animation-play-state: paused;
+}
+
+.carousel-link {
+  background-color: #f8f9fa5d;
+}
+
+.dark .carousel-link {
+  background: #0f0f0f5b;
 }
 
 #gradient-canvas {
@@ -411,10 +419,10 @@ main.page-transition-end {
 .slider-container div span {
   background: linear-gradient(
     to right,
-    #f1de7a 20%,
-    #6d53d3 30%,
-    #628acc 70%,
-    #df8b5a 80%
+    oklch(88.74% 0.12 90.12) 20%,
+    oklch(53.98% 0.21 285.39) 30%,
+    oklch(63.24% 0.13 254.55) 70%,
+    oklch(68.7% 0.12 42.34) 80%
   );
   -webkit-background-clip: text;
   background-clip: text;
@@ -426,10 +434,10 @@ main.page-transition-end {
 .dark .slider-container div span {
   background: linear-gradient(
     to right,
-    #baa1f1 20%,
-    #9c97f0 30%,
-    #b4d0f5 70%,
-    #efbafc 80%
+    oklch(73.41% 0.15 292.31) 20%,
+    oklch(69.28% 0.15 278.42) 30%,
+    oklch(83.36% 0.07 249.83) 70%,
+    oklch(83.15% 0.12 313.45) 80%
   );
   -webkit-background-clip: text;
   background-clip: text;
@@ -567,11 +575,6 @@ main.page-transition-end {
     opacity: 0;
   }
 }
-/*houdini*/
-
-/*base*/
-
-/*custom*/
 
 @keyframes smoothBg {
   from {
@@ -605,17 +608,17 @@ main.page-transition-end {
 
   --rainbow: repeating-linear-gradient(
     100deg,
-    #c29dff 10%,
-    #ffc99d 15%,
-    #a2c6fc 20%,
-    #baabff 25%,
-    #f3aa7a 30%
+    oklch(74.73% 0.15 296.31) 10%,
+    oklch(85.3% 0.09 58.73) 15%,
+    oklch(79.74% 0.1 255.74) 20%,
+    oklch(75.98% 0.14 284.45) 25%,
+    oklch(74.96% 0.11 45.62) 30%
   );
   background-image: var(--stripes), var(--rainbow);
   background-size: 300%, 200%;
   background-position: 50% 50%, 50% 50%;
 
-  filter: blur(50px) invert(100%);
+  filter: blur(100px) invert(100%);
 
   mask-image: radial-gradient(ellipse at 100% 100%, black 40%, transparent 70%);
   &::after {
@@ -624,7 +627,7 @@ main.page-transition-end {
     inset: 0;
     background-image: var(--stripes), var(--rainbow);
     background-size: 200%, 100%;
-    animation: smoothBg 60s linear infinite;
+    animation: smoothBg 240s linear infinite;
     mix-blend-mode: difference;
   }
 }
@@ -634,14 +637,14 @@ main.page-transition-end {
 
   --rainbow: repeating-linear-gradient(
     100deg,
-    #3730cc 10%,
-    #a830cc 15%,
-    #3730cc 20%,
-    #5a30cc 25%,
-    #a830cc 30%
+    oklch(44.72% 0.23 283.53) 10%,
+    oklch(54.84% 0.25 318.31) 15%,
+    oklch(44.72% 0.23 283.53) 20%,
+    oklch(44.97% 0.23 277.65) 25%,
+    oklch(54.84% 0.25 318.31) 30%
   );
 
-  filter: blur(100px) opacity(60%);
+  filter: blur(100px) opacity(70%);
 
   mask-image: radial-gradient(ellipse at 100% 80%, black 20%, transparent 70%);
 }
